minified/make_vm_full.log
  CALL    scripts/atomic/check-atomics.sh
  CALL    scripts/checksyscalls.sh
warning: generated include/linux/atomic/atomic-long.h has been modified.
warning: generated include/linux/atomic/atomic-arch-fallback.h has been modified.
  CHK     include/generated/compile.h
  CC      lib/vsprintf.o
In file included from lib/vsprintf.c:36:
In file included from ./include/linux/rtc.h:37:
In file included from ./include/linux/device.h:30:
./include/linux/device/bus.h:190:63: warning: declaration of 'struct device_node' will not be visible outside of this function [-Wvisibility]
  190 | bus_find_device_by_of_node(struct bus_type *bus, const struct device_node *np)
      |                                                               ^
In file included from lib/vsprintf.c:36:
In file included from ./include/linux/rtc.h:37:
In file included from ./include/linux/device.h:31:
./include/linux/device/class.h:140:64: warning: declaration of 'struct device_node' will not be visible outside of this function [-Wvisibility]
  140 | class_find_device_by_of_node(struct class *class, const struct device_node *np)
      |                                                                ^
In file included from lib/vsprintf.c:36:
In file included from ./include/linux/rtc.h:37:
In file included from ./include/linux/device.h:32:
./include/linux/device/driver.h:185:23: warning: declaration of 'struct device_node' will not be visible outside of this function [-Wvisibility]
  185 |                               const struct device_node *np)
      |                                            ^
In file included from lib/vsprintf.c:36:
./include/linux/rtc.h:223:15: warning: declaration of 'struct nvmem_config' will not be visible outside of this function [-Wvisibility]
  223 |                                           struct nvmem_config *nvmem_config)
      |                                                  ^
In file included from lib/vsprintf.c:40:
In file included from ./include/net/addrconf.h:52:
In file included from ./include/linux/ipv6.h:75:
./include/linux/tcp.h:67:51: warning: declaration of 'struct sk_buff' will not be visible outside of this function [-Wvisibility]
   67 | static inline struct tcphdr *tcp_hdr(const struct sk_buff *skb)
      |                                                   ^
./include/linux/tcp.h:77:52: warning: declaration of 'struct sk_buff' will not be visible outside of this function [-Wvisibility]
   77 | static inline unsigned int tcp_hdrlen(const struct sk_buff *skb)
      |                                                    ^
./include/linux/tcp.h:82:57: warning: declaration of 'struct sk_buff' will not be visible outside of this function [-Wvisibility]
   82 | static inline struct tcphdr *inner_tcp_hdr(const struct sk_buff *skb)
      |                                                         ^
./include/linux/tcp.h:87:58: warning: declaration of 'struct sk_buff' will not be visible outside of this function [-Wvisibility]
   87 | static inline unsigned int inner_tcp_hdrlen(const struct sk_buff *skb)
      |                                                          ^
./include/linux/tcp.h:92:52: warning: declaration of 'struct sk_buff' will not be visible outside of this function [-Wvisibility]
   92 | static inline unsigned int tcp_optlen(const struct sk_buff *skb)
      |                                                    ^
./include/linux/tcp.h:515:11: error: incomplete definition of type 'const struct sock'
  515 |         return sk->sk_state == TCP_SYN_RECV &&
      |                ~~^
./include/linux/kobject_ns.h:19:8: note: forward declaration of 'struct sock'
   19 | struct sock;
      |        ^
In file included from lib/vsprintf.c:40:
In file included from ./include/net/addrconf.h:52:
In file included from ./include/linux/ipv6.h:76:
In file included from ./include/linux/udp.h:17:
./include/linux/skbuff.h:1487:31: warning: declaration of 'struct ts_config' will not be visible outside of this function [-Wvisibility]
 1487 |                            unsigned int to, struct ts_config *config);
      |                                                    ^
In file included from lib/vsprintf.c:40:
In file included from ./include/net/addrconf.h:52:
./include/linux/ipv6.h:279:22: error: field has incomplete type 'struct icmp6_filter'
  279 |         struct icmp6_filter     filter;
      |                                 ^
./include/linux/ipv6.h:279:9: note: forward declaration of 'struct icmp6_filter'
  279 |         struct icmp6_filter     filter;
      |                ^
In file included from lib/vsprintf.c:40:
In file included from ./include/net/addrconf.h:53:
./include/linux/netdevice.h:1244:17: warning: declaration of 'struct rtnl_link_stats64' will not be visible outside of this function [-Wvisibility]
 1244 |                                                    struct rtnl_link_stats64 *storage);
      |                                                           ^
./include/linux/netdevice.h:1269:19: warning: declaration of 'struct ifla_vf_info' will not be visible outside of this function [-Wvisibility]
 1269 |                                                      struct ifla_vf_info *ivf);
      |                                                             ^
./include/linux/netdevice.h:1274:18: warning: declaration of 'struct ifla_vf_stats' will not be visible outside of this function [-Wvisibility]
 1274 |                                                     struct ifla_vf_stats
      |                                                            ^
./include/linux/netdevice.h:1283:17: warning: declaration of 'struct ifla_vf_guid' will not be visible outside of this function [-Wvisibility]
 1283 |                                                    struct ifla_vf_guid *node_guid,
      |                                                           ^
In file included from lib/vsprintf.c:40:
In file included from ./include/net/addrconf.h:55:
./include/net/ipv6.h:20:10: fatal error: 'net/inet_dscp.h' file not found
   20 | #include <net/inet_dscp.h>
      |          ^~~~~~~~~~~~~~~~~
14 warnings and 3 errors generated.
make[1]: *** [scripts/Makefile.build:249: lib/vsprintf.o] Error 1
make: *** [Makefile:1839: lib] Error 2
